# DailySeq

./: .gitignore  README.md  index.html  package-lock.json  package.json
.agents/skills/trellis-check/: SKILL.md
.agents/skills/trellis-continue/: SKILL.md
.agents/skills/trellis-finish-work/: SKILL.md
.codex/agents/: trellis-implement.toml
.trellis/: .template-hashes.json  workflow.md
.trellis/agents/: implement.md
.trellis/spec/cli/: index.md
.trellis/spec/cli/backend/: index.md  workflow-state-contract.md
.trellis/spec/frontend/: component-guidelines.md  hook-guidelines.md  index.md  state-management.md
.trellis/tasks/00-bootstrap-guidelines/: prd.md  task.json
.trellis/workspace/hanxing/: index.md  journal-1.md
docs/: DEVELOPMENT.md  RELEASE.md
scripts/: Package-Windows.ps1
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
