[package]
name = "dailyseq"
version = "0.1.0"
description = "A lightweight desktop sticky-note planner."
authors = ["DailySeq contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dailyseq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.0", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.3.2"
